cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project( knowrob )

add_subdirectory( comp_temproal )
add_subdirectory( knowrob_actions )
add_subdirectory( knowrob_map_tools )
add_subdirectory( knowrob_srdl )
add_subdirectory( knowrob_rosinstall )
add_subdirectory( knowrob_comporgprincipals )
add_subdirectory( json_prolog )
add_subdirectory( knowrob_common )
add_subdirectory( knowrob_mongo )
add_subdirectory( rosprolog )
add_subdirectory( knowrob_vis )
add_subdirectory( rosprolog )
add_subdirectory( comp_spatial )
add_subdirectory( knowrob )
add_subdirectory( knowrob_map_data )
add_subdirectory( knowrob_objects )
add_subdirectory( tf_prolog )
